CertCKAD/bai16-ingress-policy/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: net-test
spec:
  containers:
  - image: nginx
    name: frontend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
