CertCKAD/bai16-ingress-policy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
  name: test
  namespace: client
spec:
  containers:
  - image: nginx
    name: test
    # command: ["sleep", "3600"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
