CertCKAD/bai16-ingress-policy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
status:
  loadBalancer: {}
