CertCKAD/bai16-ingress-policy/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
  namespace: net-test
spec:
  podSelector: {}
  policyTypes:
  - Egress
